generated/nixidy/prod/radarr/Service-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    app.kubernetes.io/service: radarr
  name: radarr
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: radarr
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
  type: ClusterIP
