generated/nixidy/prod/radarr/HTTPRoute-radarr.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
  name: radarr
  namespace: dotfiles
spec:
  hostnames:
    - radarr.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radarr
          namespace: dotfiles
          port: 80
          weight: 1
